--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -17,6 +17,45 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+
+const cities = [];
+
+//api call
+fetch(endpoint)
+.then(blob => blob.json())
+.then(data => cities.push(...data));
+
+//find matched
+function find(wordToMatch, cities){
+  return cities.filter(place => {
+    //figure out if the city or state matched what was searched
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex) 
+  })
+}
+
+//display function
+function displayMatches(){
+  const matchArray = find(this.value, cities);
+  const html = matchArray.map(place => {
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="h1"> ${this.value}</span>`)
+    return `
+    <li> 
+    <span class="name"> ${place.city}, ${place.state} </span>
+    <span class="population"> ${place.population} </span>
+    </li>
+    `;
+  }).join('');  
+  suggestions.innerHTML = html; 
+}
+
+const searchInpput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInpput.addEventListener('change', displayMatches);
+searchInpput.addEventListener('keyup', displayMatches);
+
 </script>
   </body>
 </html>
